<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.webexam.View.Register.TeacherRegisterView">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        style="@style/linearlayoutstylebtn"
        android:layout_marginTop="7dp">
        <TextView
          style="@style/texttiltestyle"
            android:text="@string/code"/>
        <EditText
            style="@style/editlogin"
            android:hint="@string/input_code"
            android:id="@+id/input_smscode"


            android:background="@null"/>
</LinearLayout>
    <LinearLayout
        style="@style/linearlayoutstylebtn"
        android:layout_marginTop="7dp">
        <TextView
            style="@style/texttiltestyle"
            android:text="@string/university"/>
        <EditText
            style="@style/editlogin"

            android:hint="@string/input_university"
            android:id="@+id/input_univercity"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linearlayoutstylebtn"
        android:layout_marginTop="7dp">
        <TextView
            style="@style/texttiltestyle"
            android:text="@string/realname"/>
        <EditText
            style="@style/editlogin"

            android:hint="@string/input_name"
            android:id="@+id/input_name"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        style="@style/linearlayoutstylebtn"
        android:layout_marginTop="7dp">
        <TextView
            style="@style/texttiltestyle"
            android:text="@string/teacherid"/>
        <EditText
            style="@style/editlogin"

            android:hint="@string/input_teacherid"
            android:id="@+id/input_teacherid"
            android:background="@null"
            />
    </LinearLayout>

        <Button
            style="@style/loginbtn"
            android:text="@string/register"
            android:id="@+id/singup_teacher"
            android:layout_marginTop="40dp"
            />

    </LinearLayout>

</FrameLayout>
