<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.webexam.View.StudentView.IndexStudentView">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/index_student">


            <Button
         style="@style/index_student_btn"
                android:text="@string/analogexamin"

                android:id="@+id/analogexamin"

                android:textColor="@color/blue_btn"

                android:layout_marginTop="180dp"/>
            <Button
                style="@style/index_student_btn"
                android:text="@string/qustion_bank"
                android:textColor="@color/red"


                android:id="@+id/question_bank"/>
            <Button
                style="@style/index_student_btn"
                android:text="@string/daliyquestion"
                android:id="@+id/daily_practice"
                android:textColor="@color/light_green"
             />
            <Button
                style="@style/index_student_btn"
                android:text="@string/my_wrong_question"
                android:id="@+id/wrong_question"
                android:layout_marginLeft="20dp"
                android:textColor="@color/orange"/>


        </LinearLayout>




</FrameLayout>
