<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="horizontal">


        <TextView
            android:layout_width="25dp"
            android:layout_height="120dp"
            android:id="@+id/profession"
        android:gravity="center"
          android:ems="1"
            android:textColor="@color/white"
            android:background="@color/blue_btn"
            android:text="专业名称" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/class_id"
                android:textColor="#000000"
                android:textSize="15dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="banji id"

                android:gravity="center"
                android:id="@+id/class_id"/>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"

            >
            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/class_name"
                android:textColor="#000000"
                android:textSize="14dp"
                />
            <TextView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:text="班级名称"
                android:id="@+id/classname"
                android:gravity="center"
                />
     <TextView
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/class_grade"
         android:textColor="#000000"
         android:textSize="15dp"/>

            <TextView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="年级"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:id="@+id/gradeclass"/>

        </LinearLayout>


    </LinearLayout>



</LinearLayout>
